--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./api/app.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./api -s",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
     "test": "nyc mocha --require @babel/register test/**/**.js --exit --timeout 25000"
   },
   "repository": {
@@ -34,6 +38,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0",
     "nyc": "^14.1.1",
+    "regenerator-runtime": "^0.13.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
